part2-profiling/json-parser/src/snapshots/json_parser__lexer__check_basic_lexing-2.snap
---
source: src/lexer.rs
expression: "lexicize(\"123.4\".to_string())"
---
TokenStream {
    data: "123.4",
    tokens: [
        Number(
            "123.4",
        ),
    ],
}
